# indicnuerosym

./: .gitattributes  .gitignore  README.md  paper.aux  paper.out  paper.tex  paper.tex.bkp  paper_algorithms.md  paper_algorithms.tex  paper_sections_9_2_to_9_7_corrected.md  pyproject.toml  requirements.txt  run_batch_vertex.py
chandomitra/: .gitignore  README.md  benchmark_chandomitra.py  benchmark_chandomitra_20poems.json  benchmark_chandomitra_n102.py  benchmark_chandomitra_n102_gemma3-1b-base.json  benchmark_chandomitra_n102_gemma3-1b-merged.json  dwipada_augmented_dataset.json  eval_prompts.txt  eval_results.json  eval_results_finetuned.json  eval_results_finetuned_all_constraints.json  eval_results_finetuned_hard.json  eval_results_gemma4_e2b.json  pyproject.toml
crawlers/: README.md  basava_puranam.py  crawl_base.py  dwipada_bhagavatam.py  palanati_veera_charitra.py  ranganatha_ramayanam.py  srirama_parinayamu.py
data/: README.md
dataset_validation_scripts/: README.md  level1_chandass_validation.py  level2_sanity_checks.py  level3_semantic_similarity.py  level4_lexical_diversity.py  report.py  run_all.py  validation_report.txt  validation_utils.py  word_ttr.py
datasets/: README.md  dwipada_master_dataset.json  dwipada_master_filtered_perfect_dataset.json
domino/: README.md  benchmark_base_constrained_1000.json  benchmark_base_unconstrained_1000.json  benchmark_constrained_1000.json  benchmark_constrained_500.json  benchmark_hybrid.py  benchmark_hybrid_mask_reject_gemma3-1b-base.json  benchmark_hybrid_mask_reject_gemma3-1b-merged.json  (+14 more)
report/: README.md  (+6 more)
(+1114 files in other folders)
