[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dwipada"
version = "1.0.0"
description = "Neuro-symbolic tools for strict metrical Telugu Dwipada poetry generation"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "google-cloud-aiplatform>=1.72.0",
    "google-cloud-storage>=2.0.0",
    "PyYAML>=6.0.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "torch>=2.5.0",
    "transformers>=4.49.0",
    "peft>=0.14.0",
    "trl>=0.15.0",
    "datasets>=3.0.0",
    "accelerate>=1.2.0",
    "tensorboard>=2.18.0",
    "sentencepiece>=0.2.0",
    "protobuf>=5.28.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
dwipada = "dwipada.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
